samples/_failures_safe/1761171406_725b44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_660ddfc0.c: In function ‘main’:
./samples/SAFE/__tmp_660ddfc0.c:156:13: error: expected declaration or statement at end of input
  156 |             data_ptr = input + 5;
      |             ^~~~~~~~
./samples/SAFE/__tmp_660ddfc0.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_660ddfc0.c:156:13: error: expected declaration or statement at end of input
